kubernetes/apps/file-browser/file-browser/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: file-browser
  namespace: file-browser
  labels:
    app: file-browser
spec:
  type: ClusterIP
  selector:
    app: file-browser
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
