kubernetes/apps/file-browser/file-browser/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: file-browser
  namespace: file-browser
spec:
  hostnames:
    - file.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: file-browser
          namespace: file-browser
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
